--- a/testimonial.html
+++ b/testimonial.html
@@ -316,7 +316,7 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-md-8 col-md-offset-2 col-sm-12 col-xs-12">
+                    <div class="col-md-4 col-md-offset-2 col-sm-12 col-xs-12">
                         <div class="reviewPod text-center">
                             <img class="img-resonsive" src="images/Customerspeak.jpg"/>
                             <p class="reviw_body">
@@ -327,7 +327,21 @@
                             <p class="writtenBy">Albert windiesal</p>
                             <img src="images/line.png" class="img-responsive line" />
                         </div>
+                    </div>
+                    <div class="col-md-4 col-sm-12 col-xs-12">
+                        <div class="reviewPod text-center">
+                            <img class="img-resonsive" src="images/Customerspeak.jpg"/>
+                            <p class="reviw_body">
+                                <sup><i class="fas fa-quote-left"></i></sup>
+                                Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book. It usually begin..
+                                <sup><i class="fas fa-quote-right"></i></sup>
+                            </p>
+                            <p class="writtenBy">Albert windiesal</p>
+                            <img src="images/line.png" class="img-responsive line" />
+                        </div>
+                    </div>
 
+                    <div class="col-md-4 col-md-offset-2 col-sm-12 col-xs-12">
                         <div class="reviewPod text-center">
                             <img class="img-resonsive" src="images/Customerspeak.jpg"/>
                             <p class="reviw_body">
@@ -338,6 +352,8 @@
                             <p class="writtenBy">Albert windiesal</p>
                             <img src="images/line.png" class="img-responsive line" />
                         </div>
+                    </div>
+                    <div class="col-md-4 col-sm-12 col-xs-12">
                         <div class="reviewPod text-center">
                             <img class="img-resonsive" src="images/Customerspeak.jpg"/>
                             <p class="reviw_body">
@@ -348,6 +364,8 @@
                             <p class="writtenBy">Albert windiesal</p>
                             <img src="images/line.png" class="img-responsive line" />
                         </div>
+                    </div>
+                    <div class="col-md-4 col-md-offset-2 col-sm-12 col-xs-12">
                         <div class="reviewPod text-center">
                             <img class="img-resonsive" src="images/Customerspeak.jpg"/>
                             <p class="reviw_body">
@@ -358,6 +376,8 @@
                             <p class="writtenBy">Albert windiesal</p>
                             <img src="images/line.png" class="img-responsive line" />
                         </div>
+                    </div>
+                    <div class="col-md-4 col-sm-12 col-xs-12">
                         <div class="reviewPod text-center">
                             <img class="img-resonsive" src="images/Customerspeak.jpg"/>
                             <p class="reviw_body">
@@ -366,8 +386,11 @@
                                 <sup><i class="fas fa-quote-right"></i></sup>
                             </p>
                             <p class="writtenBy">Albert windiesal</p>
+                            <img src="images/line.png" class="img-responsive line" />
+                        </div>
+                    </div>
 
-                        </div>
+                    <div class="col-md-12 col-sm-12 col-xs-12">
                         <div class="view_more text-center">
                             <a href="viewmore.html" class="btn btn-primary">View more +</a>
                         </div>
