--- a/userprofile.html
+++ b/userprofile.html
@@ -269,6 +269,11 @@
                                     <label for="mobile">Avatar:</label>
                                     <input type="file" class="form-control" id="Avatar" placeholder="Avatar">
                                 </div>
+                                
+                                <div class="form-group">
+                                    <label for="mobile">KYC documents:</label>
+                                    <input type="file" class="form-control" id="Avatar" placeholder="Avatar">
+                                </div>
 
                                 <div class="form-group">
                                     <input type="submit" class="btn btn-primary btn-md" value="SAVE" />
