--- a/business_dashboard.html
+++ b/business_dashboard.html
@@ -112,30 +112,8 @@
                                         <img src="images/login_am.png" class="img-responsive" />
                                     </div>
                                     <div class="col-md-9 col-sm-9 col-xs-9 cont">
-                                        <p>Login & Security</p>
-                                        <p>Edit name, mobile number</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-4 col-sm-12 col-xs-12 " onclick="location.href='business_profile.html'">
-                                <div class="box">
-                                    <div class="col-md-3 col-sm-3 col-xs-3 image">
-                                        <img src="images/login_am.png" class="img-responsive" />
-                                    </div>
-                                    <div class="col-md-9 col-sm-9 col-xs-9 cont">
-                                        <p>Login & Security</p>
-                                        <p>Edit name, mobile number</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-4 col-sm-12 col-xs-12 " onclick="location.href='business_profile.html'">
-                                <div class="box">
-                                    <div class="col-md-3 col-sm-3 col-xs-3 image">
-                                        <img src="images/login_am.png" class="img-responsive" />
-                                    </div>
-                                    <div class="col-md-9 col-sm-9 col-xs-9 cont">
-                                        <p>Login & Security</p>
-                                        <p>Edit name, mobile number</p>
+                                        <p>KYC</p>
+                                        <p>Update your KYC documents</p>
                                     </div>
                                 </div>
                             </div>
