--- a/userprofile.html
+++ b/userprofile.html
@@ -264,15 +264,41 @@
                                     <label for="mobile">Location:</label>
                                     <input type="text" class="form-control" id="mobile" placeholder="Location">
                                 </div>
-                                
+
                                 <div class="form-group">
                                     <label for="mobile">Avatar:</label>
                                     <input type="file" class="form-control" id="Avatar" placeholder="Avatar">
                                 </div>
-                                
                                 <div class="form-group">
-                                    <label for="mobile">KYC documents:</label>
-                                    <input type="file" class="form-control" id="Avatar" placeholder="Avatar">
+                                    <label>KYC Details</label>
+                                </div>
+
+                                <div class="form-group form-inline">
+                                    <select class="form-control" name="kyc">
+                                        <option value="aadhar">Aadhar</option>
+                                        <option value="pan">PAN card</option>
+                                        <option value="licence">Driving licence</option>
+                                    </select>
+                                    <input type="file" id="avatar" class="form-control" name="avatar" accept="image/*">
+                                </div>
+
+                                <div class="form-group form-inline">
+                                    <select class="form-control" name="kyc">
+                                        <option value="">Please select</option>
+                                        <option value="aadhar">Aadhar</option>
+                                        <option value="pan">PAN card</option>
+                                        <option value="licence">Driving licence</option>
+                                    </select>
+                                    <input type="file" id="avatar" class="form-control" name="avatar" accept="image/*">
+                                </div>
+
+                                <div class="form-group form-inline">
+                                    <select class="form-control" name="kyc">
+                                        <option value="aadhar">Aadhar</option>
+                                        <option value="pan">PAN card</option>
+                                        <option value="licence">Driving licence</option>
+                                    </select>
+                                    <input type="file" id="avatar" class="form-control" name="avatar" accept="image/*">
                                 </div>
 
                                 <div class="form-group">
