--- a/business_dashboard.html
+++ b/business_dashboard.html
@@ -44,7 +44,7 @@
                                             <li class="dropdown business_logged">
                                                 <a href="#" class="dropdown-toggle logged_user" id="" data-toggle="dropdown" data-hover="dropdown">
                                                     <img class="img-rounded" src="images/default.png">
-                                                    <i class="icon-angle-down"></i>
+                                                    <i class="fas fa-caret-down"></i>
                                                 </a>
                                                 <ul class="dropdown-menu dropdownhover-bottom" role="menu" id="">
                                                     <li><a href="business_login.html">Login</a></li>
@@ -77,7 +77,7 @@
                                         <img src="images/login_am.png" class="img-responsive" />
                                     </div>
                                     <div class="col-md-9 col-sm-9 col-xs-9 cont">
-                                        <p>Login & Security</p>
+                                        <p class="title">Login & Security</p>
                                         <p>Edit name, mobile number</p>
                                     </div>
                                 </div>
@@ -88,7 +88,7 @@
                                         <img src="images/track.png" class="img-responsive" />
                                     </div>
                                     <div class="col-md-9 col-sm-9 col-xs-9 cont">
-                                        <p>Add shop</p>
+                                        <p class="title">Add shop</p>
                                         <p>Insert shop details</p>
                                     </div>
                                 </div>
@@ -99,7 +99,7 @@
                                         <img src="images/track.png" class="img-responsive" />
                                     </div>
                                     <div class="col-md-9 col-sm-9 col-xs-9 cont">
-                                        <p>Add Product</p>
+                                        <p class="title">Add Product</p>
                                         <p>Add poduct details</p>
                                     </div>
                                 </div>
@@ -112,7 +112,7 @@
                                         <img src="images/login_am.png" class="img-responsive" />
                                     </div>
                                     <div class="col-md-9 col-sm-9 col-xs-9 cont">
-                                        <p>KYC</p>
+                                        <p class="title">KYC</p>
                                         <p>Update your KYC documents</p>
                                     </div>
                                 </div>
