--- a/userprofile.html
+++ b/userprofile.html
@@ -87,6 +87,8 @@
                                             <li class="dropdown">
                                                 <a href="login.html" class="dropdown-toggle logged_user" id="submenuhead" data-toggle="dropdown" data-hover="dropdown">
                                                     <img  class="img-rounded" src="images/default.png" />
+                                                    <i class="fas fa-caret-down"></i>
+
                                                 </a>
                                                 <ul class="dropdown-menu dropdownhover-bottom" role="menu" id="submenucotent">
                                                     <li><a data-toggle="modal" data-target="#loginModal">Login</a></li>
