--- a/business.html
+++ b/business.html
@@ -57,10 +57,10 @@
 
 
         <!-- Busniess submenu -->
-        <section class="business_submenu_sec no-padding">
+        <section class="business_submenu_sec">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-12 col-sm-12 col-xs-12 no-padding">
+                    <div class="col-md-12 col-sm-12 col-xs-12">
                         <div class="business_submenu">
                             <ul class="nav nav-tabs">
                                 <li role="presentation" class="active"><a href="sell_on_sudc.html">SELL ON SUDC</a></li>
@@ -74,22 +74,157 @@
             </div>
         </section>
 
-        <!-- About the card -->
-        <section class="about_card_text">
+        <!-- Carousal section -->
+        <section class="business-header-carousal-section"> 
+
+            <div class="container">
+                <div class="row business-header-carousal">
+                    <div id="heroCarousal" class="carousel slide heroCarousal" data-interval="10000" data-ride="carousel">
+
+                        <!-- Wrapper for slides -->
+                        <div class="carousel-inner">
+                            <div class="item active">
+                                <img src="images/Banner-business-1.jpg" alt="banner1" data-tablet-src="images/Banner%20768.jpg" class="img-responsive" style="">
+                            </div>
+
+                            <div class="item">
+                                <img src="images/Banner-business-2.jpg" alt="banner1" data-tablet-src="images/Banner%20768.jpg" class="img-responsive" style="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="business-search-sec">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-md-12 col-sm-12 col-xs-12">
+                                    <h1>Want to sell on SUDC</h1>
+                                    <h2>List your products in less than 10 minutes</h2>
+                                    <p>Get your documentation & cataloging done with ease from our Professional Services network across India</p>
+                                    <a href="business_add_shop.html" class="btn btn-lg btn-primary">SELL NOW</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="business_product_count">
+            <div class="container">
+                <div class="row ">
+                    <div class="col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-12">
+                        <div class="product_count_wrapper">
+                            <div class="col-md-4 col-sm-4 col-xs-12 product_wrapper">
+                                <img src="images/business_logo1.png" class="img-responsive" />
+                                <p>Sell 24x7 across 3000 cities and towns</p>
+                            </div>
+                            <div class="col-md-4 col-sm-4 col-xs-12 product_wrapper">
+                                <img src="images/business_logo2.png" class="img-responsive" />
+                                <p>Millions of users and 3,00,000 sellers across India </p>
+                            </div>
+                            <div class="col-md-4 col-sm-4 col-xs-12 product_wrapper">
+                                <img src="images/business_logo3.png" class="img-responsive" />
+                                <p>Quick payments and transparent processes</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <div class="border_business_bottom"></div>
+
+        <section class="business_content_home">
+            <div class="container">
+                <div class="row ">
+                    <div class="col-md-10 col-md-offset-1 col-sm-12 col-xs-12">
+                        <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-12">
+                            <h1 class="alegreya text-center title">WANT TO SELL ON SAMS ULTIMATE DISCOUNT CARD?</h1>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-md-6 col-sm-6 col-xs-12 content no-padding">
+                                <h2 class="step_head">Step 1: Register yourself and List your products</h2>
+                                <ul>
+                                    <li>Register your business for free and create a product catalogue</li>
+                                    <li>Sell under your own private label or sell an existing brand</li>
+                                    <li>Get self-serve training</li>
+                                    <li>Order Packaging material from our website to start selling</li>
+                                </ul>
+                            </div>
+
+                            <div class="col-md-6 col-sm-6 col-xs-12 image no-padding">
+                                <img src="images/Image-1.jpg" class="img-responsive" />
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-md-6 col-sm-6 col-xs-12 image no-padding">
+                                <img src="images/Image-2.jpg" class="img-responsive" />
+                            </div>
+
+                            <div class="col-md-6 col-sm-6 col-xs-12 content no-padding">
+                                <h2 class="step_head">Step 2: Register yourself and List your products</h2>
+                                <ul>
+                                    <li>Register your business for free and create a product catalogue</li>
+                                    <li>Sell under your own private label or sell an existing brand</li>
+                                    <li>Get self-serve training</li>
+                                    <li>Order Packaging material from our website to start selling</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6 col-sm-6 col-xs-12 content no-padding">
+                                <h2 class="step_head">Step 3: Register yourself and List your products</h2>
+                                <ul>
+                                    <li>Register your business for free and create a product catalogue</li>
+                                    <li>Sell under your own private label or sell an existing brand</li>
+                                    <li>Get self-serve training</li>
+                                    <li>Order Packaging material from our website to start selling</li>
+                                </ul>
+                            </div>
+
+                            <div class="col-md-6 col-sm-6 col-xs-12 image no-padding">
+                                <img src="images/Image-1.jpg" class="img-responsive" />
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6 col-sm-6 col-xs-12 image no-padding">
+                                <img src="images/Image-2.jpg" class="img-responsive" />
+                            </div>
+
+                            <div class="col-md-6 col-sm-6 col-xs-12 content no-padding">
+                                <h2 class="step_head">Step 4: Register yourself and List your products</h2>
+                                <ul>
+                                    <li>Register your business for free and create a product catalogue</li>
+                                    <li>Sell under your own private label or sell an existing brand</li>
+                                    <li>Get self-serve training</li>
+                                    <li>Order Packaging material from our website to start selling</li>
+                                </ul>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="business_sell text-center">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-10 col-md-offset-1 col-sm-12 col-xs-12 no-padding">
-                        <div class="about_the_card_wrapper">
-                            <p class="about_card_head">
-                                At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.
-                            </p>
-                            <p class="about_card_description">
-                                Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat." "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat."
-                            </p>
-                            <p class="about_card_description">
-                                Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat." "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat."
-                            </p>
-                        </div>
+                    <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-12">
+                        <h1 class="alegreya text-center">WANT TO SELL ON SAMS ULTIMATE DISCOUNT CARD?</h1>
+                        <a href="business_add_shop.html" class="btn btn-lg btn-primary text-center">SELL NOW</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
+        <section class="business_info_section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 col-sm-12 col-xs-12">
+                        <p class="text-justify">
+                          Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat." "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repella
+                        </p>
                     </div>
                 </div>
             </div>
