--- a/business.html
+++ b/business.html
@@ -29,7 +29,7 @@
                     <div class="col-md-6 col-md-offset-3 col-sm-9">
                         <div class="sudc_business_menu">
                             <nav class="navbar navbar-default">
-                                <div class="container">
+                                <div class="container no-padding">
                                     <div class="navbar-header"> 
                                         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">	
                                             <span class="sr-only">Toggle navigation</span>	
@@ -38,7 +38,7 @@
                                             <span class="icon-bar"></span>						
                                         </button> 
                                     </div>
-                                    <div id="navbar" class="navbar-collapse collapse" aria-expanded="false" style="height: 1px;">
+                                    <div id="navbar" class="navbar-collapse collapse no-padding" aria-expanded="false" style="height: 1px;">
                                         <ul class="nav navbar-nav">
                                             <li class="phoneNumber">Need help : <span class="bold">+ 1234567890</span></li>
                                             <li class="active"><a href="business_login.html" class="btn btn-lg">LOG IN</a></li>
