--- a/business_login.html
+++ b/business_login.html
@@ -75,7 +75,7 @@
                             <!--forgot -->
                             <a href="#" class="btn-forgot" onclick="openForgotPassword();">forgot password ?</a>
                             <div class="form-group">
-                                <input type="submit" class="btn btn-block btn-primary" value="LOGIN">
+                                <input type="submit" class="btn btn-block btn-primary padding_10" value="LOGIN">
                             </div>
                         </form>
                         <div class="business_or text-center">OR</div>
