--- a/business_profile.html
+++ b/business_profile.html
@@ -135,7 +135,7 @@
                             </div>
 
                             <div class="form-group">
-                                <input type="button" onclick="register()" class="btn btn-block btn-primary" value="Register">
+                                <input type="button" onclick="register()" class="btn btn-block btn-primary padding_10" value="Register">
                             </div>
                         </form>
 
