--- a/advertise.html
+++ b/advertise.html
@@ -79,19 +79,44 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 col-sm-12 col-xs-12">
-                       
-                            <div class="col-md-8 col-sm-8 col-xs-12 box_white no-padding">
-                                <h2>INCREASE YOUR SALE AND VISIBILTY ON SUDC CARD</h2>
-                                <ul>
-                                    <li>Get your customer</li>
-                                    <li>Sell under your own private label or sell an existing brand</li>
-                                    <li>Order Packaging material from our website to start selling</li>
-                                </ul>
+
+                        <div class="col-md-8 col-sm-8 col-xs-12 box_white no-padding">
+                            <h3 class="bold">INCREASE YOUR SALE AND VISIBILTY ON SUDC CARD</h3>
+                            <ul>
+                                <li>Get your customer</li>
+                                <li>Sell under your own private label or sell an existing brand</li>
+                                <li>Order Packaging material from our website to start selling</li>
+                            </ul>
+                        </div>
+                        <div class="col-md-4 col-sm-4 col-xs-12 box_grey no-padding">
+                            <h3 class="bold">POPULAR STORIES</h3>
+                            <div class="row mt10">
+                                <div class="col-md-4 col-sm-4 col-xs-12 popular_image">
+                                    <img src="images/Image%20Test-1.jpg" class="img-responsive" />
+                                </div>
+
+                                <div class="col-md-8 col-sm-8 col-xs-12 popular_image_link">
+                                    <a href="">Why Selling on Snapdeal is Simpler than any other services offered by the other service provider so g on Snapdeal is Simpler than</a>
+                                </div>
                             </div>
-                            <div class="col-md-4 col-sm-4 col-xs-12 box_grey no-padding">
-                                <h2>POPULAR STORIES</h2>
+                            <div class="row mt10">
+                                <div class="col-md-4 col-sm-4 col-xs-12 popular_image">
+                                    <img src="images/Image%20Test-2.jpg" class="img-responsive" />
+                                </div>
+
+                                <div class="col-md-8 col-sm-8 col-xs-12 popular_image_link">
+                                    <a href="">Why Selling on Snapdeal is Simpler than any other services offered by the other service provider so g on Snapdeal is Simpler than</a>
+                                </div>
                             </div>
-                        
+                            <div class="row mt10">
+                                <div class="col-md-4 col-sm-4 col-xs-12 popular_image">
+                                    <img src="images/Image%20Test-1.jpg" class="img-responsive" />
+                                </div>
+                                <div class="col-md-8 col-sm-8 col-xs-12 popular_image_link">
+                                    <a href="">Why Selling on Snapdeal is Simpler than any other services offered by the other service provider so g on Snapdeal is Simpler than</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
