--- a/business.html
+++ b/business.html
@@ -21,12 +21,12 @@
             <div class="container">
                 <div class="row">
 
-                    <div class="col-md-3 col-sm-3 col-xs-8">
+                    <div class="col-md-3 col-sm-3 col-xs-8 logo_business">
                         <div class="logo">
                             <a href="index.html"><img src="images/White%20SUDC%20Logo.png" alt="Logo" class="img-responsive" /></a>
                         </div>
                     </div>
-                    <div class="col-md-6 col-md-offset-3 col-sm-9">
+                    <div class="col-md-9 col-sm-9">
                         <div class="sudc_business_menu">
                             <nav class="navbar navbar-default">
                                 <div class="container no-padding">
@@ -151,13 +151,13 @@
                                 </ul>
                             </div>
 
-                            <div class="col-md-6 col-sm-6 col-xs-12 image no-padding">
+                            <div class="col-md-6 col-sm-6 col-xs-12 image no-padding hide_on_mobile">
                                 <img src="images/Image-1.jpg" class="img-responsive" />
                             </div>
                         </div>
 
                         <div class="row">
-                            <div class="col-md-6 col-sm-6 col-xs-12 image no-padding">
+                            <div class="col-md-6 col-sm-6 col-xs-12 image no-padding hide_on_mobile">
                                 <img src="images/Image-2.jpg" class="img-responsive" />
                             </div>
 
@@ -182,12 +182,12 @@
                                 </ul>
                             </div>
 
-                            <div class="col-md-6 col-sm-6 col-xs-12 image no-padding">
+                            <div class="col-md-6 col-sm-6 col-xs-12 image no-padding hide_on_mobile">
                                 <img src="images/Image-1.jpg" class="img-responsive" />
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-md-6 col-sm-6 col-xs-12 image no-padding">
+                            <div class="col-md-6 col-sm-6 col-xs-12 image no-padding hide_on_mobile">
                                 <img src="images/Image-2.jpg" class="img-responsive" />
                             </div>
 
