--- a/merchant_testimonials.html
+++ b/merchant_testimonials.html
@@ -85,7 +85,20 @@
                                 <div class="col-md-6 col-sm-6 col-xs-12">
                                     <img src="images/Image%20Test-1.jpg" class="img-responsive" />
                                     <p class="mercnt_talk">Why Selling on Snapdeal is Simpler than any other services offered by the other service provider so g on Snapdeal is Simpler than</p>
-                                    <a href="merchant_detail" class="merchan_tal_vemoew">View more</a>
+                                    <a href="merchant_detail.html" class="merchan_tal_vemoew">View more</a>
+                                </div>
+                                <div class="col-md-6 col-sm-6 col-xs-12">
+                                    <img src="images/Image%20Test-2.jpg" class="img-responsive" />
+                                    <p class="mercnt_talk">Why Selling on Snapdeal is Simpler than any other services offered by the other service provider so g on Snapdeal is Simpler than</p>
+                                    <a href="merchant_detail.html" class="merchan_tal_vemoew">View more</a>
+                                </div>
+                            </div>
+                            
+                            <div class="row">
+                                <div class="col-md-6 col-sm-6 col-xs-12">
+                                    <img src="images/Image%20Test-1.jpg" class="img-responsive" />
+                                    <p class="mercnt_talk">Why Selling on Snapdeal is Simpler than any other services offered by the other service provider so g on Snapdeal is Simpler than</p>
+                                    <a href="merchant_detail.html" class="merchan_tal_vemoew">View more</a>
                                 </div>
                                 <div class="col-md-6 col-sm-6 col-xs-12">
                                     <img src="images/Image%20Test-2.jpg" class="img-responsive" />
@@ -98,25 +111,12 @@
                                 <div class="col-md-6 col-sm-6 col-xs-12">
                                     <img src="images/Image%20Test-1.jpg" class="img-responsive" />
                                     <p class="mercnt_talk">Why Selling on Snapdeal is Simpler than any other services offered by the other service provider so g on Snapdeal is Simpler than</p>
-                                    <a href="merchant_detail" class="merchan_tal_vemoew">View more</a>
+                                    <a href="merchant_detail.html" class="merchan_tal_vemoew">View more</a>
                                 </div>
                                 <div class="col-md-6 col-sm-6 col-xs-12">
                                     <img src="images/Image%20Test-2.jpg" class="img-responsive" />
                                     <p class="mercnt_talk">Why Selling on Snapdeal is Simpler than any other services offered by the other service provider so g on Snapdeal is Simpler than</p>
-                                    <a href="merchant_detail" class="merchan_tal_vemoew">View more</a>
-                                </div>
-                            </div>
-                            
-                            <div class="row">
-                                <div class="col-md-6 col-sm-6 col-xs-12">
-                                    <img src="images/Image%20Test-1.jpg" class="img-responsive" />
-                                    <p class="mercnt_talk">Why Selling on Snapdeal is Simpler than any other services offered by the other service provider so g on Snapdeal is Simpler than</p>
-                                    <a href="merchant_detail" class="merchan_tal_vemoew">View more</a>
-                                </div>
-                                <div class="col-md-6 col-sm-6 col-xs-12">
-                                    <img src="images/Image%20Test-2.jpg" class="img-responsive" />
-                                    <p class="mercnt_talk">Why Selling on Snapdeal is Simpler than any other services offered by the other service provider so g on Snapdeal is Simpler than</p>
-                                    <a href="merchant_detail" class="merchan_tal_vemoew">View more</a>
+                                    <a href="merchant_detail.html" class="merchan_tal_vemoew">View more</a>
                                 </div>
                             </div>
                         </div>
