--- a/advertise.html
+++ b/advertise.html
@@ -97,7 +97,7 @@
                                 <li><p>Get assured buy buttonrem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p></li>
                                 <li><p>Order Packaging material from our website to start selling</p></li>
                                 <li><p>Get your customer</p></li>
-                                
+
                             </ul>
 
                             <h3 class="bold head">INCREASE YOUR SALE AND VISIBILTY ON SUDC CARD</h3>
@@ -105,7 +105,7 @@
                                 <li><p>Get your customer</p></li>
                                 <li><p>Get assured buy buttonrem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p></li>
                                 <li><p>Order Packaging material from our website to start selling</p></li>
-                                 <li><p>Get your customer</p></li>
+                                <li><p>Get your customer</p></li>
                                 <li><p>Get assured buy buttonrem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p></li>
                             </ul>
 
@@ -156,7 +156,10 @@
             </div>
         </section>
 
-
+        <script>
+            setHightForBusiness();
+        </script>
+        
         <!-- Footer -->
         <footer class="footer_business footer_top">
             <div class="container">
