--- a/index.html
+++ b/index.html
@@ -407,17 +407,21 @@
                                             <!--<div class="row">-->
                                             <!-- <ul class="list-group horizontal main_search">-->
                                             <div class="col-md-5 col-sm-12 col-xs-12 no-padding">
-                                                <div class="form-group looking">
-                                                 <select class="form-control no-border">
-                                                        <option value="">I'm looking for</option>
-                                                        <option value="">I'm looking for product</option>
-                                                        <option value="">I'm looking for shop</option>
-                                                    </select>
+                                                <div class="col-md-5 col-sm-12 col-xs-12 no-padding">
+                                                    <div class="form-group looking_select">
+                                                        <select class="form-control bold no-border">
+                                                            <option value="">I'm looking for</option>
+                                                            <option value="">I'm looking for product</option>
+                                                            <option value="">I'm looking for shop</option>
+                                                        </select>
+                                                    </div>
                                                 </div>
-                                                <div class="form-group looking">
-                                                   
-                                                    <input type="text" class="form-control no-border" id="search" placeholder="Enter your search" />
-                                                    <input type="hidden" name="category" id="category" />
+                                                <div class="col-md-7 col-sm-12 col-xs-12 no-padding">
+                                                    <div class="form-group looking">
+
+                                                        <input type="text" class="form-control no-border" id="search" placeholder="Enter your search" />
+                                                        <input type="hidden" name="category" id="category" />
+                                                    </div>
                                                 </div>
                                             </div>
                                             <div class="col-md-5 col-sm-12 col-xs-12 no-padding">
@@ -1984,7 +1988,7 @@
                     <div class="col-md-2 col-sm-4 footer_height">
                         <h4>SUDC business</h4>
                         <ul>
-                            <li class="active"><a href="index.html">SUDC business</a></li>
+                            <li class="active"><a href="business.html">SUDC business</a></li>
                             <li><a href="sell_on_sudc.html">Sell on SUDC</a>
                             <li><a href="advertise.html">Advertise on SUDC</a></li>
                             <li><a href="merchant_testimonials.html">Merchant's testimonials</a></li>
