--- a/index.html
+++ b/index.html
@@ -411,8 +411,8 @@
                                                     <div class="form-group looking_select">
                                                         <select class="form-control bold no-border">
                                                             <option value="">I'm looking for</option>
-                                                            <option value="">I'm looking for product</option>
-                                                            <option value="">I'm looking for shop</option>
+                                                            <option value="product">I'm looking for product</option>
+                                                            <option value="shop">I'm looking for shop</option>
                                                         </select>
                                                     </div>
                                                 </div>
