--- a/shops.html
+++ b/shops.html
@@ -266,9 +266,21 @@
                                             <!--<div class="row">-->
                                             <!-- <ul class="list-group horizontal main_search">-->
                                             <div class="col-md-5 col-sm-12 col-xs-12">
-                                                <div class="form-group looking">
-                                                    <label for="search">I'm looking for</label>
-                                                    <input type="text" class="form-control no-border" id="search" placeholder="Restaurants . . . ">
+                                                <div class="col-md-5 col-sm-12 col-xs-12 no-padding">
+                                                    <div class="form-group looking_select">
+                                                        <select class="form-control bold no-border">
+                                                            <option value="">I'm looking for</option>
+                                                            <option value="product">I'm looking for product</option>
+                                                            <option value="shop">I'm looking for shop</option>
+                                                        </select>
+                                                    </div>
+                                                </div>
+                                                <div class="col-md-7 col-sm-12 col-xs-12 no-padding">
+                                                    <div class="form-group looking">
+
+                                                        <input type="text" class="form-control no-border" id="search" placeholder="Enter your search" />
+                                                        <input type="hidden" name="category" id="category" />
+                                                    </div>
                                                 </div>
                                             </div>
                                             <div class="col-md-5 col-sm-12 col-xs-10">
