--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
                     </div>
 
-                    <div class="col-md-3 col-sm-3 col-xs-8">
+                    <div class="col-md-3 col-sm-3 col-xs-8 logo_business">
                         <div class="logo">
                             <a href="index.html"><img src="images/logo.jpg" alt="Logo" class="img-responsive" /></a>
                         </div>
