--- a/sell_on_sudc.html
+++ b/sell_on_sudc.html
@@ -64,7 +64,7 @@
                         <div class="business_submenu">
                             <ul class="nav nav-tabs">
                                 <li role="presentation" class="active"><a href="sell_on_sudc.html">SELL ON SUDC</a></li>
-                                <li role="presentation"  class="active"><a href="advertise.html">ADVERTISE ON SUDC</a></li>
+                                <li role="presentation" ><a href="advertise.html">ADVERTISE ON SUDC</a></li>
                                 <li role="presentation"><a href="merchant_testimonials.html">MERCHANT'S TESTIMONIAL</a></li>
                                 <li role="presentation"><a href="merchant_benifits.html">MERCHANT'S BENIFITS</a></li>
                             </ul>
