--- a/business.html
+++ b/business.html
@@ -60,7 +60,7 @@
         <section class="business_submenu_sec">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-12 col-sm-12 col-xs-12">
+                    <div class="col-md-12 col-sm-12 col-xs-12 no-padding">
                         <div class="business_submenu">
                             <ul class="nav nav-tabs">
                                 <li role="presentation"><a href="sell_on_sudc.html">SELL ON SUDC</a></li>
@@ -246,8 +246,8 @@
                         </div>
                     </div>
 
-                    <div class="col-md-3 col-sm-6 col-xs-12">
-                        <div class="col-md-3 col-sm-6">
+                    <div class="col-md-3 col-sm-6 col-xs-12 footer-phone">
+                        <div class="col-md-3 col-sm-6 no-padding">
                             <img src="images/Call%20icon.png" alt="" class="img-responsive" />
                         </div>
                         <div class="col-md-9 col-sm-9">
