--- a/product_detail.html
+++ b/product_detail.html
@@ -655,17 +655,19 @@
                                     <div class="col-md-5 col-sm-6 col-xs-12 no-padding rev_search_teaser">
                                         <h2>Customer reviews</h2>
                                     </div>
-                                    
+
                                 </div>
-                                <div class="col-md-6 col-sm-4 col-xs-12 rev_search_srt text-right">
-                                    <div class="pull-right">
+                                <div class="col-md-2 col-md-offset-4 col-sm-4 col-xs-12 rev_search_srt no-padding">
+                                    <div class="cust-selc pull-right">
                                         <span class="grey">Sort by: </span>
-                                        <select class="custom-select custom-select-xl mb-3 rev_search_srt_by pull-right grey">
+                                        <i class="icon-angle-down"></i> 
+                                        <select class="custom-select custom-select-lg mb-3 rev_search_srt_by no-border grey">
                                             <option selected="">SUDC sort</option>
                                             <option value="1">One</option>
                                             <option value="2">Two</option>
                                             <option value="3">Three</option>
                                         </select>
+                                        
                                     </div>
                                 </div>
                             </div>
