--- a/userprofile_dashboard.html
+++ b/userprofile_dashboard.html
@@ -261,7 +261,7 @@
 
                         </div>
                         <div class="row">
-                            <div class="col-md-4 col-sm-12 col-xs-12" onclick="location.href='userprofile_detail.html'">
+                            <div class="col-md-4 col-sm-12 col-xs-12" onclick="location.href='userprofile_details.html'">
                                 <div class="box">
                                     <div class="col-md-3 col-sm-3 col-xs-3 image">
                                         <img src="images/track.png" class="img-responsive" />
