--- a/index.html
+++ b/index.html
@@ -2020,6 +2020,8 @@
             </div>
         </footer>
         <div class="upar"></div>
+        <div class="spinner-grow spinner-grow-xl spinner-grow-primary fixed">
+        </div>
     </body>
     <script>
         /*Auto complete script */
