--- a/advertise.html
+++ b/advertise.html
@@ -83,7 +83,7 @@
                         <div class="col-md-8 col-sm-8 col-xs-12 box_white no-padding">
                             <h3 class="bold">INCREASE YOUR SALE AND VISIBILTY ON SUDC CARD</h3>
                             <ul class="advertise_ul">
-                                <li><p>Get your customer</p></li>
+                                <li><p>Get your customer base using get assured buy buttonrem Ipsum is simp</p></li>
                                 <li><p>Get assured buy buttonrem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p></li>
                                 <li><p>Order Packaging material from our website to start selling</p></li>
                             </ul>
