--- a/business.html
+++ b/business.html
@@ -164,7 +164,7 @@
                             <div class="col-md-6 col-sm-6 col-xs-12 content no-padding">
                                 <h2 class="step_head">Step 2: Register yourself and List your products</h2>
                                 <ul>
-                                    <li>Register your business for free and create a product catalogue</li>
+                                    <li>Register your business for free and create a product catalogue Register your business for free and create a product catalogue</li>
                                     <li>Sell under your own private label or sell an existing brand</li>
                                     <li>Get self-serve training</li>
                                     <li>Order Packaging material from our website to start selling</li>
