--- a/business_shop _detail.html
+++ b/business_shop _detail.html
@@ -102,7 +102,7 @@
         <section class="brd_crmb">
             <div class="container">
                 <div class="row">
-                    <div class="col-xs-6">
+                    <div class="col-md-6 col-xs-12">
                         <nav aria-label="breadcrumb">
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="#">Home</a></li>
@@ -112,7 +112,7 @@
 
                         </nav>
                     </div>
-                    <div class="col-xs-6">
+                    <div class="col-md-6 col-xs-12">
                         <span class="addEditView pull-right">
                             <p>
                                 <i class="icon-map-marker"></i><a href="" class="text-primary">View Shop</a><span>|</span> 
