--- a/business_add_product.html
+++ b/business_add_product.html
@@ -62,7 +62,7 @@
                     <div class="col-md-10 col-md-offset-1 col-sm-12 col-xs-12">
 
 
-                        <h3 class="title">Add shop details</h3>
+                        <h3 class="title">Add product details</h3>
 
                         <form role="form" class="form-edit-add" action="http://staging.sudc.co/admin/products" method="POST" enctype="multipart/form-data">
 
