--- a/business_shop.html
+++ b/business_shop.html
@@ -125,13 +125,13 @@
         <section class="business_shop_search">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-12 col-sm-8 col-xs-12 min-height">
+                    <div class="col-md-12 col-sm-12 col-xs-12 min-height">
                         <div class="">
                             <div class="row">
-                                <div class="col-md-9 col-xs-12">
+                                <div class="col-md-9 col-sm-8 col-xs-12">
                                     <h3 class="mt100"> We've got 937 stores results for Mobile phone</h3>
                                 </div>
-                                <div class="col-md-3 col-xs-12 mt100 sort">
+                                <div class="col-md-3 col-sm-4 col-xs-12 mt100 sort">
                                     <div class="cust-selc pull-right">
                                         <span class="grey">Sort by:</span>
 
@@ -147,10 +147,10 @@
                                 </div>
                             </div>
                             <div class="row mt25">
-                                <div class="col-md-3 col-xs-12">
+                                <div class="col-md-3 col-sm-4 col-xs-12">
                                     <img src="images/Product-1.jpg" class="img-responsive">
                                 </div>
-                                <div class="col-md-9 col-xs-12">
+                                <div class="col-md-9 col-sm-8 col-xs-12">
                                     <div class="row">
                                         <h3 class="pad_mar_0 title">1. Expecia Stores</h3>
                                         <div class="adrs mt10">
@@ -181,10 +181,10 @@
                                 </div>
                             </div>
                             <div class="row mt25">
-                                <div class="col-md-3 col-xs-12">
+                                <div class="col-md-3 col-sm-4 col-xs-12">
                                     <img src="images/Product-2.jpg" class="img-responsive">
                                 </div>
-                                <div class="col-md-9 col-xs-12">
+                                <div class="col-md-9 col-sm-8 col-xs-12">
                                     <div class="row">
                                         <h3 class="pad_mar_0 title">2. Dyson store</h3>
                                         <div class="adrs mt10">
@@ -214,10 +214,10 @@
                                 </div>
                             </div>
                             <div class="row mt25">
-                                <div class="col-md-3 col-xs-12">
+                                <div class="col-md-3 col-sm-4 col-xs-12">
                                     <img src="images/Product-3.jpg" class="img-responsive">
                                 </div>
-                                <div class="col-md-9 col-xs-12">
+                                <div class="col-md-9 col-sm-8 col-xs-12">
                                     <div class="row">
                                         <h3 class="pad_mar_0 title">3. Amazon store</h3>
                                         <div class="adrs mt10">
@@ -247,10 +247,10 @@
                                 </div>
                             </div>
                             <div class="row mt25">
-                                <div class="col-md-3 col-xs-12">
+                                <div class="col-md-3 col-sm-4 col-xs-12">
                                     <img src="images/Product-4.jpg" class="img-responsive">
                                 </div>
-                                <div class="col-md-9 col-xs-12">
+                                <div class="col-md-9 col-sm-8 col-xs-12">
                                     <div class="row">
                                         <h3 class="pad_mar_0 title">4. Ebay store</h3>
                                         <div class="adrs mt10">
@@ -282,10 +282,10 @@
 
 
                             <div class="row mt25">
-                                <div class="col-md-3 col-xs-12">
+                                <div class="col-md-3 col-sm-4 col-xs-12">
                                     <img src="images/Product-1.jpg" class="img-responsive">
                                 </div>
-                                <div class="col-md-9 col-xs-12">
+                                <div class="col-md-9 col-sm-8 col-xs-12">
                                     <div class="row">
                                         <h3 class="pad_mar_0 title">5. Expecia Stores</h3>
                                         <div class="adrs mt10">
@@ -327,10 +327,10 @@
                             </div>
 
                             <div class="row mt25">
-                                <div class="col-md-3 col-xs-12">
+                                <div class="col-md-3 col-sm-4 col-xs-12">
                                     <img src="images/Product-1.jpg" class="img-responsive">
                                 </div>
-                                <div class="col-md-9 col-xs-12">
+                                <div class="col-md-9 col-sm-8 col-xs-12">
                                     <div class="row">
                                         <h3 class="pad_mar_0 title">11. Expecia Stores</h3>
                                         <div class="adrs mt10">
@@ -360,10 +360,10 @@
                                 </div>
                             </div>
                             <div class="row mt25">
-                                <div class="col-md-3 col-xs-12">
+                                <div class="col-md-3 col-sm-4 col-xs-12">
                                     <img src="images/Product-2.jpg" class="img-responsive">
                                 </div>
-                                <div class="col-md-9 col-xs-12">
+                                <div class="col-md-9 col-sm-8 col-xs-12">
                                     <div class="row">
                                         <h3 class="pad_mar_0 title">12. Dyson store</h3>
                                         <div class="adrs mt10">
