--- a/business_product_list.html
+++ b/business_product_list.html
@@ -121,16 +121,16 @@
             </div>
         </div>
 
-        <div class="container">
+        <div class="container business_pro_page">
             <div class="row">
 
                 <div class="col-md-12 col-sm-12 col-xs-12 product_list_pod">
                     <div class="">
                         <div class="row border-bottom pdbtm">
-                            <div class="col-md-9 col-xs-12">
+                            <div class="col-md-9 col-sm-8 col-xs-12">
                                 <h3 class="mt100"> Products by this seller (150)</h3>
                             </div>
-                            <div class="col-md-3 col-xs-12 mt40 sort no-padding">
+                            <div class="col-md-3  col-sm-4 col-xs-12 mt40 sort no-padding">
                                 <div class="cust-selc pull-right">
                                     <span class="grey">Sort by:</span>
 
