--- a/business_add_product.html
+++ b/business_add_product.html
@@ -146,7 +146,7 @@
 
 
                             <div class="form-group col-md-12">
-                                <button type="submit" class="btn btn-primary btn-lg save btn-block">Save</button>
+                                <button type="submit" class="btn btn-primary btn-lg save center-block busi_sub_btn">Save</button>
                             </div>
                         </form>
                     </div>
