--- a/business_add_shop.html
+++ b/business_add_shop.html
@@ -163,7 +163,7 @@
                                 <label for="name">Shop Map</label>
                             </div>
                             <div class="form-group submit_btn col-md-12">
-                                <button type="submit" class="btn btn-primary save btn-block">Save</button>
+                                <button type="submit" class="btn btn-primary save center-block busi_sub_btn">Save</button>
                             </div>
 
                         </form>
